# nbt-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: nbt_throughput.rs
src/: codec_bridge.rs  config.rs  core.rs  encoding.rs  error.rs  experiments.rs  headless.rs  lib.rs  limits.rs  mcstructure.rs  protocol_adapter.rs  root.rs  serde_api.rs  tag.rs
tests/: p2_fixture_compat_integration.rs  p3_pathological_fixture_regression.rs
