[package]
name = "nbt-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Fast, idiomatic NBT library for Rust with Bedrock and Java endian variants."
authors = ["ClexaGod"]
readme = "README.md"
repository = "https://github.com/mcbe-rs/nbt-rust"
homepage = "https://github.com/mcbe-rs/nbt-rust"
documentation = "https://docs.rs/nbt-rust/latest/nbt_rust/"
keywords = ["nbt", "minecraft", "bedrock", "serialization", "binary"]
categories = ["encoding", "parser-implementations", "game-development"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**",
    "benches/**",
    "tests/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
byteorder = "1.5"
indexmap = "2.7"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "nbt_throughput"
harness = false
